MOD-124	Desktop + Mobile Web: Pending Order Bar for Submitted Orders Pending Order Bar    fix sticky header z-index to be below overlays (2000)    fix "skip to content" to have the highest z-index (10001)    fix clear order history cache so NEW orders show without requiring logout/login
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@79760 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/locationbar_fdx.css
+++ b/projects/Media/docroot/assets/css/common/locationbar_fdx.css
@@ -1623,7 +1623,7 @@ option.address-icon {
 	-webkit-transition: all 0.2s ease-in-out !important;
 	-moz-transition: all 0.2s ease-in-out !important;
 	transition: all 0.2s ease-in-out !important;
-	background: transparen !important;
+	background: transparent !important;
 	left: 0 !important;
 	padding-bottom: 1rem !important;
 	padding-left: 1.5rem !important;
@@ -1631,7 +1631,7 @@ option.address-icon {
 	padding-top: 1rem !important;
 	position: absolute !important;
 	top: -4.2rem !important;
-	z-index: 1000 !important;
+	z-index: 100001 !important;
 	color: #458b4c !important;
 	background-color: #ffffff !important;
     border: 1px solid #4fa157 !important;
